Tugas Contact List

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /004 - JDBC/Latihan JDBC/build/
 /005 - MVC/nbproject/private/
 /005 - MVC/build/
+/006 - contact list/nbproject/private/
+/006 - contact list/build/
